I dunno, it's working

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>What's for Dinner?</h1>
+    <!-- <h1>What's for Dinner?</h1> -->
 
     <div id="inputSection">
     <form>
@@ -29,13 +29,14 @@
 <div id="table">
     <div id="meals-table">
         <div id=""></div>
-            <div id="first-meal"></div>
-            <div id="second-meal"></div>
-            <div id="third-meal"></div>
-            <div id="fourth-meal"></div>
-            <div id="fifth-meal"></div>
-            <div id="sixth-meal"></div>
-            <div id="seventh-meal"></div>
+            <div class="meals-output-list" id="first-meal"></div>
+              
+            <div class="meals-output-list" id="second-meal"></div>
+            <div class="meals-output-list" id="third-meal"></div>
+            <div class="meals-output-list" id="fourth-meal"></div>
+            <div class="meals-output-list" id="fifth-meal"></div>
+            <div class="meals-output-list" id="sixth-meal"></div>
+            <div class="meals-output-list" id="seventh-meal"></div>
         </div>
 </div>
 
