Add button working

--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     </div>
 
 <div id="table">
-    <div id="meals-table">
-        <div id=""></div>
-            <div class="meals-output-list" id="first-meal"></div>
-              
+    <table id="meals-table">
+        <tr id=""></tr>
+            <td class="meals-output-list" id="first-meal"></td>
+              <td id="first-ingredients"></td>
             <div class="meals-output-list" id="second-meal"></div>
             <div class="meals-output-list" id="third-meal"></div>
             <div class="meals-output-list" id="fourth-meal"></div>
             <div class="meals-output-list" id="fifth-meal"></div>
             <div class="meals-output-list" id="sixth-meal"></div>
             <div class="meals-output-list" id="seventh-meal"></div>
-        </div>
+    </table>
 </div>
 
 <footer id="newMeal">
