--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dinner Ideas Randomiser</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Press+Start+2P&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <!-- <h1>What's for Dinner?</h1> -->
+    <h1>What's for Dinner?</h1>
 
     <div id="inputSection">
     <form>
@@ -29,14 +36,27 @@
 <div id="table">
     <table id="meals-table">
         <tr id=""></tr>
-            <td class="meals-output-list" id="first-meal"></td>
-              <td id="first-ingredients"></td>
-            <div class="meals-output-list" id="second-meal"></div>
-            <div class="meals-output-list" id="third-meal"></div>
-            <div class="meals-output-list" id="fourth-meal"></div>
-            <div class="meals-output-list" id="fifth-meal"></div>
-            <div class="meals-output-list" id="sixth-meal"></div>
-            <div class="meals-output-list" id="seventh-meal"></div>
+          <td class="meals-output-list" id="first-meal"></td>
+           <td id="first-ingredients"></td>
+        <tr id=""></tr>
+          <td class="meals-output-list" id="second-meal"></td>
+          <td id="second-ingredients"></td>
+        <tr id=""></tr>
+          <td class="meals-output-list" id="third-meal"></td>
+          <td id="third-ingredients"></td>
+        <tr id=""></tr>
+          <td class="meals-output-list" id="fourth-meal"></td>
+          <td id="fourth-ingredients"></td>
+        <tr id=""></tr>
+            <td class="meals-output-list" id="fifth-meal"></td>
+            <td id="fifth-ingredients"></td>
+        <tr id=""></tr>
+          <td class="meals-output-list" id="sixth-meal"></td>
+          <td id="sixth-ingredients"></td>
+        <tr id=""></tr>
+            <td class="meals-output-list" 
+            id="seventh-meal"></td>
+            <td id="seventh-ingredients"></td>
     </table>
 </div>
 
