--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   </head>
   <body>
     <h1>What's for Dinner?</h1>
-
     <div id="inputSection">
     <form>
         <select id="meals-number" placeholder="Number of meals">
@@ -35,30 +34,41 @@
 
 <div id="table">
     <table id="meals-table">
-        <tr id=""></tr>
-          <td class="meals-output-list" id="first-meal"></td>
-           <td id="first-ingredients"></td>
-        <tr id=""></tr>
-          <td class="meals-output-list" id="second-meal"></td>
-          <td id="second-ingredients"></td>
-        <tr id=""></tr>
-          <td class="meals-output-list" id="third-meal"></td>
-          <td id="third-ingredients"></td>
-        <tr id=""></tr>
-          <td class="meals-output-list" id="fourth-meal"></td>
-          <td id="fourth-ingredients"></td>
-        <tr id=""></tr>
-            <td class="meals-output-list" id="fifth-meal"></td>
-            <td id="fifth-ingredients"></td>
-        <tr id=""></tr>
-          <td class="meals-output-list" id="sixth-meal"></td>
-          <td id="sixth-ingredients"></td>
-        <tr id=""></tr>
-            <td class="meals-output-list" 
+        <tr></tr>
+          <td class="mealDisplay" id="first-meal"></td>
+        <tr></tr>
+           <td class="ingredients" id="first-ingredients"></td>
+        <tr></tr>
+          <td class="mealDisplay" id="second-meal"></td>
+        <tr></tr>
+          <td class="ingredients" id="second-ingredients"></td>
+        <tr></tr>
+          <td class="mealDisplay" id="third-meal"></td>
+        <tr></tr>
+          <td class="ingredients" id="third-ingredients"></td>
+        <tr></tr>
+          <td class="mealDisplay" id="fourth-meal"></td>
+        <tr></tr>
+          <td class="ingredients" id="fourth-ingredients"></td>
+        <tr></tr>
+          <td class="mealDisplay" id="fifth-meal"></td>
+        <tr></tr>
+          <td class="ingredients" id="fifth-ingredients"></td>
+        <tr></tr>
+          <td class="mealDisplay" id="sixth-meal"></td>
+        <tr></tr>
+          <td class="ingredients" id="sixth-ingredients"></td>
+        <tr></tr>
+            <td class="mealDisplay" 
             id="seventh-meal"></td>
-            <td id="seventh-ingredients"></td>
+        <tr></tr>
+            <td class="ingredients" id="seventh-ingredients"></td>
     </table>
 </div>
+
+<!-- <div>
+  <img id="char" src="https://drive.google.com/thumbnail?id=1CbV--Oogrro5joi_tY3XMg_7r5GLoLJV">
+</div> -->
 
 <footer id="newMeal">
     <input id="mealInput" placeholder="Add a new meal"/>
