--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
   <a href="about.html">About</a>
   </div>
     <div id="inputSection">
-      <div id="numberButtons">
+      <fieldset id="numberButtons">
+        <legend>Number of meals</legend>
         <button class=numBtn id="btn-1">1</button>
         <button class=numBtn id="btn-2">2</button>
         <button class=numBtn id="btn-3">3</button>
@@ -41,7 +42,7 @@
         <button class=numBtn id="btn-5">5</button>
         <button class=numBtn id="btn-6">6</button>
         <button class=numBtn id="btn-7">7</button>
-      </div>
+      </fieldset>
     
        
     </div>
