--- a/meal_manager.html
+++ b/meal_manager.html
@@ -38,6 +38,40 @@
 <input id="mealInput" placeholder="Add a new meal"/>
 <button id="add-btn">Add</button>
 
+<div id="table">
+  <table id="meals-table">
+      <tr></tr>
+        <td class="mealText" id="first-meal"></td>
+      <tr></tr>
+         <td class="ingredientsText" id="first-ingredients"></td>
+      <tr></tr>
+        <td class="mealText" id="second-meal"></td>
+      <tr></tr>
+        <td class="ingredientsText" id="second-ingredients"></td>
+      <tr></tr>
+        <td class="mealText" id="third-meal"></td>
+      <tr></tr>
+        <td class="ingredientsText" id="third-ingredients"></td>
+      <tr></tr>
+        <td class="mealText" id="fourth-meal"></td>
+      <tr></tr>
+        <td class="ingredientsText" id="fourth-ingredients"></td>
+      <tr></tr>
+        <td class="mealText" id="fifth-meal"></td>
+      <tr></tr>
+        <td class="ingredientsText" id="fifth-ingredients"></td>
+      <tr></tr>
+        <td class="mealText" id="sixth-meal"></td>
+      <tr></tr>
+        <td class="ingredientsText" id="sixth-ingredients"></td>
+      <tr></tr>
+          <td class="mealText" 
+          id="seventh-meal"></td>
+      <tr></tr>
+          <td class="ingredientsText" id="seventh-ingredients"></td>
+  </table>
+</div>
+
 <script src="meal_manager.js"></script>
 </body>
 
