Progress on Meal Manager functionality

--- a/meal_manager.html
+++ b/meal_manager.html
@@ -16,15 +16,21 @@
   </head>
 <body>
 
-  <header>
+<header>
+  <h1>Meal Manager</h1>
+  <button class="openbtn" onclick="openNav()">&#9776;</button>
+</header>
 
-    <h1>Meal Manager</h1>
-    
-    <div id="main">
-      <button class="openbtn" onclick="openNav()">&#9776;</button>
-    </div>
+  <main>
+    <div class="mealItem"></div>
+    <p>Meal1</p>
+        <div class="actionsContainer">
+        <button><i class="fa-solid fa-pen-to-square"></i></button>
+        <button><i class="fa-solid fa-trash"></i></button>
+        </div>
+    </main>
 
-  </header>
+  
 
 <div class="container">
   <div id="mySidebar" class="sidebar">
