--- a/meal_manager.html
+++ b/meal_manager.html
@@ -30,6 +30,9 @@
         </div>
   </main>
 
+  <div id="addIcon">
+    <img src="https://drive.google.com/file/d/1MhVSslQP13lEZEbCfZOwHvMId28UsHes" width="100px">
+  </div>
   
 
 <div class="container">
@@ -41,8 +44,13 @@
   </div>
 </div>
 
-<input id="mealInput" placeholder="Add a new meal"/>
-<button id="add-btn">Add</button>
+<div id="inputContainer">
+  <div class="inputBtns">
+    <input id="mealInput" placeholder="Add a new meal"/>
+    <input id="ingredientsInput" placeholder="Add ingredients"/>
+  </div>
+  <button id="add-btn">Add</button>
+</div>
 
 <div id="table">
   <table id="meals-table">
