Added plus button to MM

--- a/meal_manager.html
+++ b/meal_manager.html
@@ -29,10 +29,6 @@
         <button><i class="fa-solid fa-trash"></i></button>
         </div>
   </main>
-
-  <div id="addIcon">
-    <img src="https://drive.google.com/file/d/1MhVSslQP13lEZEbCfZOwHvMId28UsHes" width="100px">
-  </div>
   
 
 <div class="container">
@@ -84,6 +80,13 @@
       <tr></tr>
           <td class="ingredientsText" id="seventh-ingredients"></td>
   </table>
+</div>
+
+<div id="add-icon">
+  <div id="orange-circle">
+    <div id="vertical-strip"></div>
+    <div id="horizontal-strip"></div>
+  </div>
 </div>
 
 <script src="meal_manager.js"></script>
