Plus icon reveals meal input

--- a/meal_manager.html
+++ b/meal_manager.html
@@ -41,6 +41,10 @@
 </div>
 
 <div id="inputContainer">
+  <div id="close-input">
+    <div id="close-line1"></div>
+    <div id="close-line2"></div>
+  </div>
   <div class="inputBtns">
     <input id="mealInput" placeholder="Add a new meal"/>
     <input id="ingredientsInput" placeholder="Add ingredients"/>
