Fade in on meal manager

--- a/meal_manager.html
+++ b/meal_manager.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
-<body>
+<body id="body">
 
 <header>
   <h1>Meal Manager</h1>
@@ -34,9 +34,11 @@
 <div class="container">
   <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="index.html">Start</a>
-  <a href="manage_meals.html">Manage Meals</a>
-  <a href="about.html">About</a>
+  <div id="sidebar-links">
+    <a href="index.html">Start</a>
+    <a href="manage_meals.html">Manage Meals</a>
+    <a href="about.html">About</a>
+  </div>
   </div>
 </div>
 
