--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
+
+  <body id="body">
     <header>
 
     <h1>What's for Dinner?</h1>
@@ -25,12 +26,14 @@
 
   </header>
 
-<div class="container">
+<div class="container" >
   <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="index.html">Start</a>
-  <a href="meal_manager.html">Manage Meals</a>
-  <a href="about.html">About</a>
+  <div id="sidebar-links">
+    <a href="index.html">Start</a>
+    <a href="meal_manager.html">Manage Meals</a>
+    <a href="about.html">About</a>
+  </div>
   </div>
     <div id="inputSection">
       <fieldset id="numberButtons">
