--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Press+Start+2P&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src = "https://releases.jquery.com/git/jquery-git.min.js"></script>
   </head>
 
   <div id="mySidebar" class="sidebar">
@@ -28,7 +29,7 @@
 
     <h1>What's for Dinner?</h1>
     <div id="main">
-      <button class="openbtn" onclick="openNav()">&#9776;</button>
+      <button id="openbtn" onclick="openNav()">&#9776;</button>
     </div>
 
     
