--- a/meal_manager.html
+++ b/meal_manager.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Press+Start+2P&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src = "https://releases.jquery.com/git/jquery-git.min.js"></script>
   </head>
   
 
@@ -27,23 +28,21 @@
 
 <header>
   <h1>Meal Manager</h1>
-  <button class="openbtn" onclick="openNav()">&#9776;</button>
+  <button id="openbtn" onclick="openNav()">&#9776;</button>
 </header>
 
 <body id="body">
-  <main>
+
+<main>
     <div class="mealItem"></div>
     <p>Meal1</p>
         <div class="actionsContainer">
         <button><i class="fa-solid fa-pen-to-square"></i></button>
         <button><i class="fa-solid fa-trash"></i></button>
-        </div>
-  </main>
+      </div>
+</main>
   
-
-<div class="container">
-  
-</div>
+<!-- <div class="container"></div> -->
 
 <div id="inputContainer">
   <div class="textInput">
@@ -64,6 +63,6 @@
 </div>
 
 <script src="meal_manager.js"></script>
-</body>
 
+</body>
 </html>
