--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
     </div>
 
   <header>
-
     <h1>What's for Dinner?</h1>
-    <div id="main">
+    <div id="navbar">
       <button id="openbtn" onclick="openNav()">&#9776;</button>
     </div>
-
-    
-
   </header>
 
 
