--- a/meal_manager.html
+++ b/meal_manager.html
@@ -28,7 +28,9 @@
 
 <header>
   <h1>Meal Manager</h1>
+  <div id="navbar">
   <button id="openbtn" onclick="openNav()">&#9776;</button>
+</div>
 </header>
 
 <body id="body">
@@ -41,8 +43,6 @@
         <button><i class="fa-solid fa-trash"></i></button>
       </div>
 </main>
-  
-<!-- <div class="container"></div> -->
 
 <div id="inputContainer">
   <div class="textInput">
