Added slide toggle to add meal input

--- a/meal_manager.html
+++ b/meal_manager.html
@@ -55,12 +55,15 @@
   </div>
 </div>
 
-<div id="add-icon" onclick="openInputPanel()">
-  <div id="orange-circle">
-    <div id="vertical-strip"></div>
-    <div id="horizontal-strip"></div>
+<div
+  id="add-icon"
+ 
+  class="rotate">
+    <div id="orange-circle">
+      <div id="vertical-strip"></div>
+      <div id="horizontal-strip"></div>
+    </div>
   </div>
-</div>
 
 <script src="meal_manager.js"></script>
 
