Added to About and added media queries

--- a/about.html
+++ b/about.html
@@ -35,6 +35,12 @@
   </div>
 </div>
 
+<p>This application is intended to make the weekly shop a wee bit easier by spitballing meal ideas. Upon clicking a number on the homepage, you'll be presented with a corresponding number of meal ideas along with their ingredients.</p>
+
+<p>You can add, edit and delete meal ideas in the Meal Manager, accessible via the sidebar. Any changes you make will be automatically saved so that all your meals will be there next time you visit the site.</p>
+
+<p>As it currently stands, changes are saved to your browser's local storage. This means that clearing your browser's cookies and cache will delete all your changes. In the future, I hope to add a user login system or export and import functionality.</p>
+
 <script src="meal_manager.js"></script>
 </body>
 
