--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   <div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="index.html">Start</a>
-  <a href="manage_meals.html">Manage Meals</a>
+  <a href="meal_manager.html">Manage Meals</a>
   <a href="about.html">About</a>
   </div>
 </div>
