--- a/about.html
+++ b/about.html
@@ -13,27 +13,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Press+Start+2P&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src = "https://releases.jquery.com/git/jquery-git.min.js"></script>
   </head>
-<body>
 
-  <header>
-
-    <h1>About</h1>
-    
-    <div id="main">
-      <button class="openbtn" onclick="openNav()">&#9776;</button>
+  <div id="mySidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <div id="sidebar-links">
+      <a href="index.html">Start</a>
+      <a href="meal_manager.html">Manage Meals</a>
+      <a href="about.html">About</a>
+    </div>
     </div>
 
-  </header>
-
-<div class="container">
-  <div id="mySidebar" class="sidebar">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="index.html">Start</a>
-  <a href="meal_manager.html">Manage Meals</a>
-  <a href="about.html">About</a>
+<header>
+  <h1>About</h1>
+  <div id="navbar">
+    <button id="openbtn" onclick="openNav()">&#9776;</button>
   </div>
-</div>
+</header>
+
+<body>
 
 <p>This application is intended to make the weekly shop a wee bit easier by spitballing meal ideas. Upon clicking a number on the homepage, you'll be presented with a corresponding number of meal ideas along with their ingredients.</p>
 
@@ -41,7 +40,6 @@
 
 <p>As it currently stands, changes are saved to your browser's local storage. This means that clearing your browser's cookies and cache will delete all your changes. In the future, I hope to add a user login system or export and import functionality.</p>
 
-<script src="meal_manager.js"></script>
 </body>
-
+<script src="about.js"></script>
 </html>
