--- a/meal_manager.html
+++ b/meal_manager.html
@@ -39,8 +39,8 @@
     <div class="mealItem"></div>
     <p>Meal1</p>
         <div class="actionsContainer">
-        <button><i class="fa-solid fa-pen-to-square"></i></button>
-        <button><i class="fa-solid fa-trash"></i></button>
+        <button id="editIcon"><i class="fa-solid fa-pen-to-square"></i></button>
+        <button id="deleteIcon"><i class="fa-solid fa-trash"></i></button>
       </div>
 </main>
 
