Style changes, added to about and starting work on draggable items

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Press+Start+2P&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="about_style.css">
     <script src = "https://releases.jquery.com/git/jquery-git.min.js"></script>
   </head>
 
@@ -34,11 +35,13 @@
 
 <body>
 
-<p>This application is intended to make the weekly shop a wee bit easier by spitballing meal ideas. Upon clicking a number on the homepage, you'll be presented with a corresponding number of meal ideas along with their ingredients.</p>
+<main>
+<p class="main-text">This application is intended to make the weekly shop a wee bit easier by giving you meal ideas you may have forgotten about. Click a number on the homepage and you'll be presented with a corresponding number of meal ideas along with their ingredients.</p>
 
-<p>You can add, edit and delete meal ideas in the Meal Manager, accessible via the sidebar. Any changes you make will be automatically saved so that all your meals will be there next time you visit the site.</p>
+<p class="main-text">You can add, edit and delete meal ideas in the Meal Manager, accessible via the sidebar. Any changes you make will be automatically saved so that all your meals will be there next time you visit the site.</p>
 
-<p>As it currently stands, changes are saved to your browser's local storage. This means that clearing your browser's cookies and cache will delete all your changes. In the future, I hope to add a user login system or export and import functionality.</p>
+<p class="main-text">As it currently stands, changes are saved to your browser's local storage. This means that clearing your browser's cookies and cache will delete all your changes. In the future, I hope to add a user login system or export and import functionality.</p>
+</main>
 
 </body>
 <script src="about.js"></script>
