--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
 <body id="body">
   
-<div class="container" >
+<div class="container">
     <div id="inputSection">
       <fieldset id="numberButtons">
-        <legend>Number of meals</legend>
+        <legend id="indexH2">Number of meals</legend>
         <button class=numBtn id="btn-1">1</button>
         <button class=numBtn id="btn-2">2</button>
         <button class=numBtn id="btn-3">3</button>
