--- a/meal_manager.html
+++ b/meal_manager.html
@@ -21,7 +21,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <div id="sidebar-links">
       <a href="index.html">Start</a>
-      <a href="manage_meals.html">Manage Meals</a>
+      <a href="meal_manager.html">Manage Meals</a>
       <a href="about.html">About</a>
     </div>
     </div>
@@ -57,7 +57,7 @@
 <div
   id="add-icon"
   class="rotate">
-    <div id="orange-circle">
+    <div id="open-meal-adder">
       <div id="vertical-strip"></div>
       <div id="horizontal-strip"></div>
     </div>
