Drag not working

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body id="body">
   
-<div class="container">
+<div class="index-main-content">
     <div id="inputSection">
       <fieldset id="numberButtons">
         <legend id="indexH2">Number of meals</legend>
