--- a/meal_manager.html
+++ b/meal_manager.html
@@ -36,12 +36,14 @@
 <body id="body">
 
 <main>
+  <div class="draggables-container">
     <div class="mealItem"></div>
     <p>Meal1</p>
         <div class="actionsContainer">
         <button id="editIcon"><i class="fa-solid fa-pen-to-square"></i></button>
         <button id="deleteIcon"><i class="fa-solid fa-trash"></i></button>
       </div>
+  </div>
 </main>
 
 <div id="inputContainer">
