Tweaks - working version

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 
   <header>
-    <h1>What's for Dinner?</h1>
+    <h1 id="page-title">What's for Dinner?</h1>
     <div id="navbar">
       <button id="openbtn" onclick="openNav()">&#9776;</button>
     </div>
@@ -82,6 +82,8 @@
             <td class="ingredientsText" id="seventh-ingredients"></td>
     </table>
 </div>
+
+<h1 id="shopping-list-title">Shopping List</h1>
 
 </div>
 
