Fixed openbtn shifting issue

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     </div>
 
 <header>
-  <h1>About</h1>
+  <h1  class="unselectable" id="about-title">About</h1>
   <div id="navbar">
     <button id="openbtn" onclick="openNav()">&#9776;</button>
   </div>
