--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dinner Ideas Randomiser</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Press+Start+2P&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
     <script src = "https://releases.jquery.com/git/jquery-git.min.js"></script>
   </head>
 
-  <div id="mySidebar" class="sidebar">
+  <div id="mySidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <div id="sidebar-links">
       <a href="index.html">Start</a>
@@ -26,7 +24,7 @@
     </div>
 
   <header>
-    <h1 id="page-title">What's for Dinner?</h1>
+    <h1 class="unselectable" id="index-page-title">What's for Dinner?</h1>
     <div id="navbar">
       <button id="openbtn" onclick="openNav()">&#9776;</button>
     </div>
@@ -35,55 +33,71 @@
 
 <body id="body">
   
-<div class="index-main-content">
-    <div id="inputSection">
-      <fieldset id="numberButtons">
-        <legend id="indexH2">Number of meals</legend>
-        <button class=numBtn id="btn-1">1</button>
-        <button class=numBtn id="btn-2">2</button>
-        <button class=numBtn id="btn-3">3</button>
-        <button class=numBtn id="btn-4">4</button>
-        <button class=numBtn id="btn-5">5</button>
-        <button class=numBtn id="btn-6">6</button>
-        <button class=numBtn id="btn-7">7</button>
-      </fieldset> 
-    </div>
+<div id="index-main-content">
+    <!-- <button id="generate-btn">Generate my meals!</button> -->
 
-<div id="table">
     <table id="meals-table">
-        <tr></tr>
+        <tr>
+          <td class="dayOfWeek">Mon</td>
           <td class="mealText" id="first-meal"></td>
-        <tr></tr>
-           <td class="ingredientsText" id="first-ingredients"></td>
-        <tr></tr>
+        </tr>
+        <tr>
+          <td></td>
+          <td class="ingredientsText" id="first-ingredients"></td>
+        </tr>
+        <tr>
+          <td class="dayOfWeek">Tue</td>
           <td class="mealText" id="second-meal"></td>
-        <tr></tr>
+        </tr>
+        <tr>
+        <td></td>
           <td class="ingredientsText" id="second-ingredients"></td>
-        <tr></tr>
+        </tr>
+        <tr>
+          <td class="dayOfWeek">Wed</td>
           <td class="mealText" id="third-meal"></td>
-        <tr></tr>
+        </tr>
+        <tr>
+          <td></td>
           <td class="ingredientsText" id="third-ingredients"></td>
-        <tr></tr>
+        </tr>
+        <tr>
+          <td class="dayOfWeek">Thu</td>
           <td class="mealText" id="fourth-meal"></td>
-        <tr></tr>
+        </tr>
+        <tr>
+          <td></td>
           <td class="ingredientsText" id="fourth-ingredients"></td>
-        <tr></tr>
+        </tr>
+        <tr>
+          <td class="dayOfWeek">Fri</td>
           <td class="mealText" id="fifth-meal"></td>
-        <tr></tr>
+        </tr>
+        <tr>
+          <td></td>
           <td class="ingredientsText" id="fifth-ingredients"></td>
-        <tr></tr>
+        </tr>
+        <tr>
+          <td class="dayOfWeek">Sat</td>
           <td class="mealText" id="sixth-meal"></td>
-        <tr></tr>
+        </tr>
+        <tr>
+          <td></td>
           <td class="ingredientsText" id="sixth-ingredients"></td>
-        <tr></tr>
-            <td class="mealText" 
-            id="seventh-meal"></td>
-        <tr></tr>
-            <td class="ingredientsText" id="seventh-ingredients"></td>
+        </tr>
+        <tr>
+          <td class="dayOfWeek">Sun</td>
+          <td class="mealText" id="seventh-meal"></td>
+        </tr>
+        <tr>
+        <td></td>
+          <td class="ingredientsText" id="seventh-ingredients"></td>
+        </tr>
     </table>
-</div>
 
-<h1 id="shopping-list-title">Shopping List</h1>
+  <div id="shopping-list">
+    <h2 id="shopping-list-title">Shopping List</h2>
+  </div>
 
 </div>
 
