--- a/meal_manager.html
+++ b/meal_manager.html
@@ -27,7 +27,7 @@
     </div>
 
 <header>
-  <h1>Meal Manager</h1>
+  <h1 class="unselectable" id="meal-manager-title">Meal Manager</h1>
   <div id="navbar">
   <button id="openbtn" onclick="openNav()">&#9776;</button>
 </div>
