Before I make a big oopsie with table

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         </tr>
     </table>
 
-  <div id="shopping-list">
+  <!-- <div id="shopping-list">
     <h2 id="shopping-list-title">Shopping List</h2>
-  </div>
+  </div> -->
 
 </div>
 
