Working but new meals aren't selected and displayed on index page

--- a/index.html
+++ b/index.html
@@ -36,62 +36,55 @@
 <div id="index-main-content">
 
     <table id="meals-table">
-        <tr>
-          <td class="dayOfWeek">Mon</td>
-          <td class="mealText" id="first-meal"></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td class="ingredientsText" id="first-ingredients"></td>
-        </tr>
-        <tr>
-          <td class="dayOfWeek">Tue</td>
-          <td class="mealText" id="second-meal"></td>
-        </tr>
-        <tr>
-        <td></td>
-          <td class="ingredientsText" id="second-ingredients"></td>
-        </tr>
-        <tr>
-          <td class="dayOfWeek">Wed</td>
-          <td class="mealText" id="third-meal"></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td class="ingredientsText" id="third-ingredients"></td>
-        </tr>
-        <tr>
-          <td class="dayOfWeek">Thu</td>
-          <td class="mealText" id="fourth-meal"></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td class="ingredientsText" id="fourth-ingredients"></td>
-        </tr>
-        <tr>
-          <td class="dayOfWeek">Fri</td>
-          <td class="mealText" id="fifth-meal"></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td class="ingredientsText" id="fifth-ingredients"></td>
-        </tr>
-        <tr>
-          <td class="dayOfWeek">Sat</td>
-          <td class="mealText" id="sixth-meal"></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td class="ingredientsText" id="sixth-ingredients"></td>
-        </tr>
-        <tr>
-          <td class="dayOfWeek">Sun</td>
-          <td class="mealText" id="seventh-meal"></td>
-        </tr>
-        <tr>
-        <td></td>
-          <td class="ingredientsText" id="seventh-ingredients"></td>
-        </tr>
+      <tr>
+        <td class="dayOfWeek">Mon</td>
+        <td>
+          <div class="mealText" id="first-meal"></div>
+          <div class="ingredientsText" id="first-ingredients"></div>
+        </td>
+      </tr>
+      <tr>
+        <td class="dayOfWeek">Tue</td>
+        <td>
+          <div class="mealText" id="second-meal"></div>
+          <div class="ingredientsText" id="second-ingredients"></div>
+        </td>
+      </tr>
+      <tr>
+        <td class="dayOfWeek">Wed</td>
+        <td>
+          <div class="mealText" id="third-meal"></div>
+          <div class="ingredientsText" id="third-ingredients"></div>
+        </td>
+      </tr>
+      <tr>
+        <td class="dayOfWeek">Thu</td>
+        <td>
+          <div class="mealText" id="fourth-meal"></div>
+          <div class="ingredientsText" id="fourth-ingredients"></div>
+        </td>
+      </tr>
+      <tr>
+        <td class="dayOfWeek">Fri</td>
+        <td>
+          <div class="mealText" id="fifth-meal"></div>
+          <div class="ingredientsText" id="fifth-ingredients"></div>
+        </td>
+      </tr>
+      <tr>
+        <td class="dayOfWeek">Sat</td>
+        <td>
+          <div class="mealText" id="sixth-meal"></div>
+          <div class="ingredientsText" id="sixth-ingredients"></div>
+        </td>
+      </tr>
+      <tr>
+        <td class="dayOfWeek">Sun</td>
+        <td>
+          <div class="mealText" id="seventh-meal"></div>
+          <div class="ingredientsText" id="seventh-ingredients"></div>
+        </td>
+      </tr>
     </table>
 
   <!-- <div id="shopping-list">
