--- a/index.html
+++ b/index.html
@@ -26,14 +26,19 @@
   <header>
     <h1 class="unselectable" id="index-page-title">What's for Dinner?</h1>
     <div id="navbar">
-      <button id="openbtn" onclick="openNav()">&#9776;</button>
+      <button id="hamburger" onclick="openNav()">&#9776;</button>
     </div>
   </header>
 
 
 <body id="body">
-  
+
+  <div id="generateBtnContainer">
+  <button id="generateBtn">Generate my meal plan</button>
+</div>
+
 <div id="index-main-content">
+  
 
     <table id="meals-table">
       <tr>
