--- a/index.html
+++ b/index.html
@@ -42,50 +42,64 @@
 
     <table id="meals-table">
       <tr>
-        <td class="dayOfWeek">Mon</td>
-        <td>
+        <td
+          class="dayOfWeek"
+          id="first-day">Mon
+        </td>
           <div class="mealText" id="first-meal"></div>
           <div class="ingredientsText" id="first-ingredients"></div>
         </td>
       </tr>
       <tr>
-        <td class="dayOfWeek">Tue</td>
-        <td>
+        <td
+          class="dayOfWeek"
+          id="second-day">Tue
+        </td>
           <div class="mealText" id="second-meal"></div>
           <div class="ingredientsText" id="second-ingredients"></div>
         </td>
       </tr>
       <tr>
-        <td class="dayOfWeek">Wed</td>
+        <td
+          class="dayOfWeek"
+          id="third-day">Wed
+        </td>
         <td>
           <div class="mealText" id="third-meal"></div>
           <div class="ingredientsText" id="third-ingredients"></div>
         </td>
       </tr>
       <tr>
-        <td class="dayOfWeek">Thu</td>
-        <td>
+        <td
+          class="dayOfWeek"
+          id="fourth-day">Thu
+        </td>
           <div class="mealText" id="fourth-meal"></div>
           <div class="ingredientsText" id="fourth-ingredients"></div>
         </td>
       </tr>
       <tr>
-        <td class="dayOfWeek">Fri</td>
-        <td>
+        <td
+          class="dayOfWeek"
+          id="fifth-day">Fri
+        </td>
           <div class="mealText" id="fifth-meal"></div>
           <div class="ingredientsText" id="fifth-ingredients"></div>
         </td>
       </tr>
       <tr>
-        <td class="dayOfWeek">Sat</td>
-        <td>
+        <td
+          class="dayOfWeek"
+          id="sixth-day">Sat
+        </td>
           <div class="mealText" id="sixth-meal"></div>
           <div class="ingredientsText" id="sixth-ingredients"></div>
         </td>
       </tr>
       <tr>
-        <td class="dayOfWeek">Sun</td>
-        <td>
+        <td
+          class="dayOfWeek" id="seventh-day">Sun
+        </td>
           <div class="mealText" id="seventh-meal"></div>
           <div class="ingredientsText" id="seventh-ingredients"></div>
         </td>
