--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <header>
   <h1  class="unselectable" id="about-title">About</h1>
   <div id="navbar">
-    <button id="hamburger" onclick="openNav()">&#9776;</button>
+    <button id="openbtn" onclick="openNav()">&#9776;</button>
   </div>
 </header>
 
@@ -40,8 +40,9 @@
 
 <p class="main-text">You can add, edit and delete meal ideas in the Meal Manager, accessible via the sidebar. Any changes you make will be automatically saved so that all your meals will be there next time you visit the site.</p>
 
-<p class="main-text">As it currently stands, changes are saved to your browser's local storage. This means that clearing your browser's cookies and cache will delete all your changes. I intend to add a user login system or export and import functionality in the near future.</p>
+<p class="main-text">As it currently stands, changes are saved to your browser's local storage. This means that clearing your browser's cookies and cache will delete all your changes. In the future, I hope to add a user login system or export and import functionality.</p>
 
+<p class="main-text">Note: Clearing your browser data will result in your saved meals being lost.</p>
 </main>
 
 </body>
