Restored back to working

--- a/index.html
+++ b/index.html
@@ -26,75 +26,66 @@
   <header>
     <h1 class="unselectable" id="index-page-title">What's for Dinner?</h1>
     <div id="navbar">
-      <button id="openbtn" onclick="openNav()">&#9776;</button>
+      <button id="hamburger" onclick="openNav()">&#9776;</button>
     </div>
   </header>
 
 
 <body id="body">
-  
+
+  <div id="generateBtnContainer">
+  <button id="generateBtn">Generate my meal plan</button>
+</div>
+
 <div id="index-main-content">
+  
 
     <table id="meals-table">
       <tr>
-        <td
-          class="dayOfWeek"
-          id="first-day">Mon
-        </td>
+        <td class="dayOfWeek">Mon</td>
+        <td>
           <div class="mealText" id="first-meal"></div>
           <div class="ingredientsText" id="first-ingredients"></div>
         </td>
       </tr>
       <tr>
-        <td
-          class="dayOfWeek"
-          id="second-day">Tue
-        </td>
+        <td class="dayOfWeek">Tue</td>
+        <td>
           <div class="mealText" id="second-meal"></div>
           <div class="ingredientsText" id="second-ingredients"></div>
         </td>
       </tr>
       <tr>
-        <td
-          class="dayOfWeek"
-          id="third-day">Wed
-        </td>
+        <td class="dayOfWeek">Wed</td>
         <td>
           <div class="mealText" id="third-meal"></div>
           <div class="ingredientsText" id="third-ingredients"></div>
         </td>
       </tr>
       <tr>
-        <td
-          class="dayOfWeek"
-          id="fourth-day">Thu
-        </td>
+        <td class="dayOfWeek">Thu</td>
+        <td>
           <div class="mealText" id="fourth-meal"></div>
           <div class="ingredientsText" id="fourth-ingredients"></div>
         </td>
       </tr>
       <tr>
-        <td
-          class="dayOfWeek"
-          id="fifth-day">Fri
-        </td>
+        <td class="dayOfWeek">Fri</td>
+        <td>
           <div class="mealText" id="fifth-meal"></div>
           <div class="ingredientsText" id="fifth-ingredients"></div>
         </td>
       </tr>
       <tr>
-        <td
-          class="dayOfWeek"
-          id="sixth-day">Sat
-        </td>
+        <td class="dayOfWeek">Sat</td>
+        <td>
           <div class="mealText" id="sixth-meal"></div>
           <div class="ingredientsText" id="sixth-ingredients"></div>
         </td>
       </tr>
       <tr>
-        <td
-          class="dayOfWeek" id="seventh-day">Sun
-        </td>
+        <td class="dayOfWeek">Sun</td>
+        <td>
           <div class="mealText" id="seventh-meal"></div>
           <div class="ingredientsText" id="seventh-ingredients"></div>
         </td>
