Start style changes and refactoring

--- a/about.html
+++ b/about.html
@@ -34,16 +34,12 @@
 </header>
 
 <body>
+  <main>
+    <p class="main-text">This application is intended to make the weekly shop a wee bit easier by giving you meal ideas you may have forgotten about. Click the 'Generate my meal plan' button on the homepage and you'll be presented with a list of meal ideas for the week along with their ingredients.</p>
 
-<main>
-<p class="main-text">This application is intended to make the weekly shop a wee bit easier by giving you meal ideas you may have forgotten about. Click a number on the homepage and you'll be presented with a corresponding number of meal ideas along with their ingredients.</p>
-
-<p class="main-text">You can add, edit and delete meal ideas in the Meal Manager, accessible via the sidebar. Any changes you make will be automatically saved so that all your meals will be there next time you visit the site.</p>
-
-<p class="main-text">As it currently stands, changes are saved to your browser's local storage. This means that clearing your browser's cookies and cache will delete all your changes. I intend to add a user login system or export and import functionality in the near future.</p>
-
-</main>
-
+    <p class="main-text">You can add, edit and delete meal ideas in the Meal Manager, accessible via the sidebar. Any changes you make will be automatically saved so that all your meals will be there next time you visit the site, until you clear your browser's cookies (I'm working on an export/import feature!).</p>
+  </main>
 </body>
+
 <script src="about.js"></script>
 </html>
