--- a/meal_manager.html
+++ b/meal_manager.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Dinner Ideas Randomiser Manager</title>
+    <title>Meal Manager</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -38,11 +38,11 @@
 <main>
   <div class="draggables-container">
     <div class="mealItem"></div>
-    <p>Meal1</p>
-        <div class="actionsContainer">
+      <p>Example Meal</p>
+      <div class="actionsContainer">
         <button id="editIcon"><i class="fa-solid fa-pen-to-square"></i></button>
         <button id="deleteIcon"><i class="fa-solid fa-trash"></i></button>
-      </div>
+    </div>
   </div>
 </main>
 
