--- a/meal_manager.html
+++ b/meal_manager.html
@@ -10,14 +10,13 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Press+Start+2P&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src = "https://releases.jquery.com/git/jquery-git.min.js"></script>
   </head>
   
 
-  <div id="mySidebar" class="sidebar">
+  <div class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <div id="sidebar-links">
       <a href="index.html">Start</a>
