--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     </div>
   </div>
 
-  <div class="button-tray">
-    <button class="button-neutral" id="generate-button">Generate new meal plan</button>
-  </div>
+  
 
   <header>
     <h1 class="unselectable" id="index-page-title">What's for Dinner?</h1>
@@ -89,6 +87,11 @@
     </div>
     <div class="button-section">
     </div>
+
+    <div class="button-tray">
+    <button class="button-neutral" id="generate-button">Generate new meal plan</button>
+    <div class="tray-toggle"></div>
+  </div>
 
 	<script src="index.js"></script>
   </body>
