--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dinner Ideas Randomiser</title>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles.css">
@@ -21,15 +23,12 @@
     </div>
   </div>
 
-  
-
-  <header>
-    <h1 class="unselectable" id="index-page-title">What's for Dinner?</h1>
-    <div id="navbar">
-      <button class="hamburger" onclick="openNav()">&#9776;</button>
-    </div>
-  </header>
-
+<header>
+  <h1 class="unselectable" id="index-page-title">What's for Dinner?</h1>
+  <div id="navbar">
+    <button class="hamburger" onclick="openNav()">&#9776;</button>
+  </div>
+</header>
 
 <body id="body">
   <div id="index-main-content">
@@ -85,15 +84,15 @@
       </tr>
     </table>
     </div>
-    <div class="button-section">
-    </div>
 
-    <div class="button-tray">
+  <div class="button-tray tray-hidden" id="index-button-tray">
     <button class="button-neutral" id="generate-button">Generate new meal plan</button>
-    <div class="tray-toggle"></div>
+    <div class="tray-toggle">
+      <i class="fa-solid fa-chevron-down" id="toggle-chevron"></i>
+    </div>
   </div>
 
-	<script src="index.js"></script>
-  </body>
+<script type="module" src="./index.js"></script>
+</body>
 
 </html>
