--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
 
   <div class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="javascript:void(0)" class="closebtn">&times;</a>
     <div id="sidebar-links">
       <a href="index.html">Start</a>
       <a href="meal_manager.html">Manage Meals</a>
@@ -26,7 +26,7 @@
 <header>
   <h1 class="unselectable" id="index-page-title">What's for Dinner?</h1>
   <div id="navbar">
-    <button class="hamburger" onclick="openNav()">&#9776;</button>
+    <button class="hamburger">&#9776;</button>
   </div>
 </header>
 
