--- a/index.html
+++ b/index.html
@@ -36,50 +36,50 @@
       <tr>
         <td class="dayOfWeek">Mon</td>
         <td>
-          <div class="mealText" id="first-meal"></div>
-          <div class="ingredientsText" id="first-ingredients"></div>
+          <div class="meal-text" id="first-meal"></div>
+          <div class="ingredients-text" id="first-ingredients"></div>
         </td>
       </tr>
       <tr>
         <td class="dayOfWeek">Tue</td>
         <td>
-          <div class="mealText" id="second-meal"></div>
-          <div class="ingredientsText" id="second-ingredients"></div>
+          <div class="meal-text" id="second-meal"></div>
+          <div class="ingredients-text" id="second-ingredients"></div>
         </td>
       </tr>
       <tr>
         <td class="dayOfWeek">Wed</td>
         <td>
-          <div class="mealText" id="third-meal"></div>
-          <div class="ingredientsText" id="third-ingredients"></div>
+          <div class="meal-text" id="third-meal"></div>
+          <div class="ingredients-text" id="third-ingredients"></div>
         </td>
       </tr>
       <tr>
         <td class="dayOfWeek">Thu</td>
         <td>
-          <div class="mealText" id="fourth-meal"></div>
-          <div class="ingredientsText" id="fourth-ingredients"></div>
+          <div class="meal-text" id="fourth-meal"></div>
+          <div class="ingredients-text" id="fourth-ingredients"></div>
         </td>
       </tr>
       <tr>
         <td class="dayOfWeek">Fri</td>
         <td>
-          <div class="mealText" id="fifth-meal"></div>
-          <div class="ingredientsText" id="fifth-ingredients"></div>
+          <div class="meal-text" id="fifth-meal"></div>
+          <div class="ingredients-text" id="fifth-ingredients"></div>
         </td>
       </tr>
       <tr>
         <td class="dayOfWeek">Sat</td>
         <td>
-          <div class="mealText" id="sixth-meal"></div>
-          <div class="ingredientsText" id="sixth-ingredients"></div>
+          <div class="meal-text" id="sixth-meal"></div>
+          <div class="ingredients-text" id="sixth-ingredients"></div>
         </td>
       </tr>
       <tr>
         <td class="dayOfWeek">Sun</td>
         <td>
-          <div class="mealText" id="seventh-meal"></div>
-          <div class="ingredientsText" id="seventh-ingredients"></div>
+          <div class="meal-text" id="seventh-meal"></div>
+          <div class="ingredients-text" id="seventh-ingredients"></div>
         </td>
       </tr>
     </table>
