Position hamburger icon on left

--- a/index.html
+++ b/index.html
@@ -24,10 +24,8 @@
   </div>
 
 <header>
+  <button class="sidebar-hamburger">&#9776;</button>
   <h1 class="unselectable" id="index-page-title">What's for Dinner?</h1>
-  <div id="navbar">
-    <button class="hamburger">&#9776;</button>
-  </div>
 </header>
 
 <body id="body">
