Fix meal manager styling

--- a/index.html
+++ b/index.html
@@ -31,49 +31,49 @@
 <body id="body">
   <div id="index-main-content">
     <table id="meals-table">
-      <tr>
+      <tr class="day-item">
         <td class="dayOfWeek">Mon</td>
         <td>
           <div class="meal-text" id="first-meal"></div>
           <div class="ingredients-text" id="first-ingredients"></div>
         </td>
       </tr>
-      <tr>
+      <tr class="day-item">
         <td class="dayOfWeek">Tue</td>
         <td>
           <div class="meal-text" id="second-meal"></div>
           <div class="ingredients-text" id="second-ingredients"></div>
         </td>
       </tr>
-      <tr>
+      <tr class="day-item">
         <td class="dayOfWeek">Wed</td>
         <td>
           <div class="meal-text" id="third-meal"></div>
           <div class="ingredients-text" id="third-ingredients"></div>
         </td>
       </tr>
-      <tr>
+      <tr class="day-item">
         <td class="dayOfWeek">Thu</td>
         <td>
           <div class="meal-text" id="fourth-meal"></div>
           <div class="ingredients-text" id="fourth-ingredients"></div>
         </td>
       </tr>
-      <tr>
+      <tr class="day-item">
         <td class="dayOfWeek">Fri</td>
         <td>
           <div class="meal-text" id="fifth-meal"></div>
           <div class="ingredients-text" id="fifth-ingredients"></div>
         </td>
       </tr>
-      <tr>
+      <tr class="day-item">
         <td class="dayOfWeek">Sat</td>
         <td>
           <div class="meal-text" id="sixth-meal"></div>
           <div class="ingredients-text" id="sixth-ingredients"></div>
         </td>
       </tr>
-      <tr>
+      <tr class="day-item">
         <td class="dayOfWeek">Sun</td>
         <td>
           <div class="meal-text" id="seventh-meal"></div>
