Fix add icon functionality

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </table>
     </div>
 
-  <div class="button-tray tray-hidden" id="index-button-tray">
+  <div class="button-tray tray-hidden" id="index__button-tray">
     <button class="button-neutral" id="generate-button">Generate new meal plan</button>
     <div class="tray-toggle">
       <i class="fa-solid fa-chevron-down" id="toggle-chevron"></i>
