--- a/meal_manager.html
+++ b/meal_manager.html
@@ -17,7 +17,7 @@
 
   <div class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <div id="sidebar-links">
+    <div class="sidebar-links">
       <a href="index.html">Start</a>
       <a href="meal_manager.html">Manage Meals</a>
       <a href="about.html">About</a>
@@ -42,17 +42,19 @@
   </div>
 </main>
 
-<!-- <div id="input-container">
-  <div class="text-input">
-    <div id="input__meal-title">Meal name</div>
-    <input placeholder="Beans on toast"/>
-  </div>
+<div class="button-tray" id="meal-manager__button-tray">
+  <div class="text-input-container">
+    <div class="text-input">
+      <div id="input__meal-title">Meal name</div>
+      <input id="meal-input" placeholder="Beans on toast"/>
+    </div>
 
-  <div class="text-input">
-    <div id="input__meal-ingredients">Ingredients</div>
-    <input id="ingredientsInput" placeholder="Beans, bread, butter"/>
+    <div class="text-input">
+      <div id="input__meal-ingredients">Ingredients</div>
+      <input id="ingredients-input" placeholder="Beans, bread, butter"/>
+    </div>
   </div>
-</div> -->
+</div>
 
 <div
   id="add-icon"
